read memery file

--- a/server/template/index.html
+++ b/server/template/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
         <title>Node Server</title>
-    </head>
+    <link rel="shortcut icon" href="/favicon.ico"><link href="/index.bundle.css?09cdcaf91585bc8f6015" rel="stylesheet"></head>
     <body>
         <div id="APP"></div>
-    </body> 
+    <script type="text/javascript" src="/index.bundle.js?09cdcaf91585bc8f6015"></script><script type="text/javascript" src="/vendor.bundle.js?09cdcaf91585bc8f6015"></script></body> 
 </html>
