--- a/client/common/less/register.less
+++ b/client/common/less/register.less
@@ -1,10 +1,12 @@
 
-.content {
+.content-register {
 
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 10px;
+    padding: 10px;
+    box-shadow: 0 2px 12px 0 rgba(0,0,0,.1);
+    margin-top: 25px;
 
     &>div {
         width: 100%;
@@ -21,16 +23,17 @@
 
     &>span {
         display: block;
-        width: 120px;
+        width: 80%;
         text-align: center;
-        height: 50px;
-        line-height: 50px;
+        height: 40px;
+        line-height: 40px;
         background: #1269cf;
         color: #fff;
-        border-radius: 10px;
+        border-radius: 4px;
         cursor: pointer;
         margin: 10px auto;
     }
+
 }
 
 
