--- a/server/template/index.html
+++ b/server/template/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
         <title>Node Server</title>
-    <link rel="shortcut icon" href="/favicon.ico"><link href="/index.bundle.css?7ef1f929d9b6d071a2fa" rel="stylesheet"></head>
+    </head>
     <body>
         <div id="APP"></div>
-    <script type="text/javascript" src="/index.bundle.js?7ef1f929d9b6d071a2fa"></script><script type="text/javascript" src="/vendor.bundle.js?7ef1f929d9b6d071a2fa"></script></body> 
+    </body>
 </html>
