--- a/server/template/index.templete.html
+++ b/server/template/index.templete.html
@@ -6,6 +6,7 @@
         <title>Node Server</title>
     </head>
     <body>
-        <div id="APP"></div>
+        <div id="APP"><%- root %></div>
+        <script>window.REDUX_STATE=<%- state %></script>
     </body> 
 </html>
